--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -565,11 +565,11 @@ The Footer section consists of a horizontal rule followed by two links separated
 ----
 [[CategoryAPI]], [[CategoryHeader]]
 ```
-: where ```CategoryAPI``` is the same for every function page and {{{CategoryHeader}}} is function-specific with <code>Header</code> varying based on the header file containing the function (see below).
+: where <code>Categor</code><code>yAPI</code> is the same for every function page and <code>Categor</code><code>yHeader</code> is function-specific with <code>Header</code> varying based on the header file containing the function (see below).
 
 <<Color2(red,''Important!'')>> Category names do not always match the header file name.  Please consult the following [[#CategoryTable|table]] for the correct name to use so the function will appear in the correct list(s).
 
-''Action 1'': Do not edit the ```CategoryAPI``` link!  
+''Action 1'': Do not edit the <code>Categor</code><code>yAPI</code> link!  
 
 ''Action 2'': The ```CategoryHeader``` link may be edited ''if'' the page still says {{{[[CategoryHeader]]}}} (as on a new page) or ''if'' the function has been relocated to another header (very rare).
 
