camelcase pragma change

--- a/SDL_ClearError.mediawiki
+++ b/SDL_ClearError.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_ClearError =
 Use this function to clear any previous error message.
