update content - add info about SDL_input.h

--- a/CategoryMouse.mediawiki
+++ b/CategoryMouse.mediawiki
@@ -19,9 +19,9 @@ Please note that this ONLY discusses "mice" with the notion of the desktop GUI. 
 
 It's not the whole picture, though. If you want more lowlevel control, SDL offers a different API that gives you visibility into each input device, multi-touch interfaces, etc. 
 
-Those two APIs are incompatible, and you usually should not use both at the same time. But for legacy purposes, this API refers to a "mouse" when it actually means the system pointer and not a physical mouse.
+The other API is in [http://hg.libsdl.org/SDL/file/100f7ab48946/include/SDL_input.h SDL_input.h].  See [[CategoryInput|Input Device Support]] for more.  
 
-The other API is in [http://hg.libsdl.org/SDL/file/100f7ab48946/include/SDL_input.h SDL_input.h]
+Those two APIs are incompatible, and you usually should not use both at the same time. But for legacy purposes, this API refers to a "mouse" when it actually means the system pointer and not a physical mouse.
 
 
 == Functions ==
