--- a/SDL_GetNumInputDevices.mediawiki
+++ b/SDL_GetNumInputDevices.mediawiki
@@ -3,7 +3,9 @@
 '''DRAFT'''
 
 = SDL_GetNumInputDevices =
-Use this function to get the number of mouse input devices available.
+Use this function to get the number of ,,mouse,, input devices available.
+
+<<Color2(green,This API is not limited to mice. Should it say "pointing" or similar instead to specify the type of input device (ie: not a keyboard) without being overly specific?)>>
 
 
 == Syntax ==
@@ -23,7 +25,7 @@ You can add your code example here
 == Remarks ==
 ''You can add useful comments here''
 
-<<Color2(green,Does it only look for mice or other input devices as well?)>>
+<<Color2(green,Would it be helpful to mention the types of input devices it would or would not count?)>>
 
 == Related Functions ==
 :[[SDL_OtherFunction]]
